# SIREN

./: .gitignore  README.md  implementation_plan.md  pyproject.toml
benchmarks/: run_all.py
docs/: benchmark_data.json
scripts/: fix_battery_svg.py  generate_plots.py
siren/: __init__.py
siren/ane/: __init__.py  latency_model.py  power_model.py  sram_budget.py
siren/compression/: __init__.py  distillation.py  profiler.py
siren/core/: __init__.py  circulant.py  fused_kernel.py  quantization.py
siren/models/: __init__.py  attention.py  feedforward.py  transformer.py
tests/: conftest.py  test_circulant.py  test_quantization.py  test_transformer.py
