[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "siren-cste"
version = "0.1.0"
description = "SIREN — Block-circulant structured compression for 2000x neural network model reduction targeting Apple Neural Engine SRAM-resident inference"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Justin Arndt"},
]
keywords = [
    "circulant-matrix", "model-compression", "neural-engine",
    "structured-pruning", "FFT", "block-circulant",
    "apple-silicon", "edge-inference", "SRAM",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]
bench = [
    "matplotlib>=3.7",
    "tabulate>=0.9",
]

[project.urls]
Repository = "https://github.com/justinarndt/siren"

[tool.setuptools.packages.find]
include = ["siren*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # Line length handled by formatter
